--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Fusion Fun</title>
-    <link rel="stylesheet" type="text/css" href="/css/bootstrapdark.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrapdark.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <div class="container">
@@ -38,6 +38,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="fuse.js" type="text/javascript"></script>
+    <script src="js/fuse.js" type="text/javascript"></script>
   </body>
 </html>
