Rearranging and Fixing Backstop
Moved files around
Fixed backstop plugin to be useable

--- a/backstopTest.html
+++ b/backstopTest.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
-    <div class="container TestSection">
+    <div class="container ReferenceTest">
       <div class="row pokemonSection">
         <div class="column">
           <div class="panel panel-default">
