--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/fuse.js" type="text/javascript"></script>
   </body>
 </html>
